// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormPreview it renders empty schema 1`] = `
<DocumentFragment>
  <div
    class="rjsf"
  >
    <div />
  </div>
</DocumentFragment>
`;

exports[`FormPreview it renders markdown in description 1`] = `
<DocumentFragment>
  <div
    class="rjsf"
  >
    <div
      class="form-group"
    >
      <div
        class="my-1"
        id="root-title"
      >
        <h5>
          A form
        </h5>
        <hr
          class="border-0 bg-secondary"
          style="height: 1px;"
        />
      </div>
      <div>
        <div
          class="mb-3"
          id="root-description"
        >
          _Form description_
        </div>
      </div>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="form-group"
            >
              <div
                class="root root isActive"
                role="group"
              >
                <input
                  class="form-control"
                  id="root_firstName"
                  name="root_firstName"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
              <div
                class="field-description text-muted"
                id="root_firstName"
              >
                <div>
                  <p>
                    <a
                      href="https://example.com"
                    >
                      link
                    </a>
                     in 
                    <strong>
                      description
                    </strong>
                  </p>
                  

                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;

exports[`FormPreview it renders simple schema 1`] = `
<DocumentFragment>
  <div
    class="rjsf"
  >
    <div
      class="form-group"
    >
      <div
        class="my-1"
        id="root-title"
      >
        <h5>
          A form
        </h5>
        <hr
          class="border-0 bg-secondary"
          style="height: 1px;"
        />
      </div>
      <div>
        <div
          class="mb-3"
          id="root-description"
        >
          A form example.
        </div>
      </div>
      <div
        class="p-0 container-fluid"
      >
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="form-group"
            >
              <div
                class="root root isActive"
                role="group"
              >
                <input
                  class="form-control"
                  id="root_firstName"
                  name="root_firstName"
                  placeholder=""
                  type="text"
                  value="Chuck"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="form-group"
            >
              <div
                class="root root"
                role="group"
              >
                <input
                  class="form-control"
                  id="root_age"
                  name="root_age"
                  placeholder=""
                  step="any"
                  type="number"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="row"
          style="margin-bottom: 10px;"
        >
          <div
            class="col-12"
          >
             
            <div
              class="form-group"
            >
              <div
                class="root root"
                role="group"
              >
                <input
                  class="form-control"
                  id="root_telephone"
                  name="root_telephone"
                  placeholder=""
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div />
  </div>
</DocumentFragment>
`;
